[tool.poetry]
name = "food-splitter"
version = "0.1.0"
description = ""
authors = ["Pytree <houjunqimail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # 至少會加入 I，因為 isort 是必要的

[tool.ruff.format]
quote-style = "double"  # 依照自己的喜好或專案需求設定 single/double